--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nyombe Benson Jalle | Portfolio </title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -39,7 +39,7 @@
                 <a href="#contact" class="btn">Get In Touch</a>
             </div>
             <div class="hero-image">
-                <img src="images/5.jpg" alt="Benson's Photo">
+                <img src="5.jpg" alt="Benson's Photo">
             </div>
         </div>
     </section>
@@ -132,7 +132,7 @@
             <div class="portfolio-grid">
                 <!-- Project 1 -->
                 <div class="portfolio-item" data-category="web">
-                    <img src="images/11.jpg" alt="Web Project 1">
+                    <img src="11.jpg" alt="Web Project 1">
                     <div class="portfolio-overlay">
                         <h3>E-commerce Website</h3>
                         <p>Full-stack e-commerce solution</p>
@@ -141,7 +141,7 @@
                 </div>
                 <!-- Project 2 -->
                 <div class="portfolio-item" data-category="design">
-                    <img src="images/1.jpg" alt="Design Project 1">
+                    <img src="1.jpg" alt="Design Project 1">
                     <div class="portfolio-overlay">
                         <h3>Brand Identity</h3>
                         <p>Logo and branding for a local business</p>
@@ -150,7 +150,7 @@
                 </div>
                  <!-- Project 3 -->
                 <div class="portfolio-item" data-category="AI">
-                    <img src="images/6.jpg" alt="AI Project 1">
+                    <img src="6.jpg" alt="AI Project 1">
                     <div class="portfolio-overlay">
                         <h3>Graduation project</h3>
                         <p>Class and graduation projects on AI</p>
