--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <div class="portfolio-grid">
                 <!-- Project 1 -->
                 <div class="portfolio-item" data-category="web">
-                    <img src="11.jpg" alt="Web Project 1">
+                    <img src="11.JPG" alt="Web Project 1">
                     <div class="portfolio-overlay">
                         <h3>E-commerce Website</h3>
                         <p>Full-stack e-commerce solution</p>
@@ -150,7 +150,7 @@
                 </div>
                  <!-- Project 3 -->
                 <div class="portfolio-item" data-category="AI">
-                    <img src="6.jpg" alt="AI Project 1">
+                    <img src="6.JPG" alt="AI Project 1">
                     <div class="portfolio-overlay">
                         <h3>Graduation project</h3>
                         <p>Class and graduation projects on AI</p>
