--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <div class="portfolio-overlay">
                         <h3>E-commerce Website</h3>
                         <p>Full-stack e-commerce solution</p>
-                        <a href="#" class="btn">View Project</a>
+                        <a href="" class="btn">View Project</a>
                     </div>
                 </div>
                 <!-- Project 2 -->
@@ -155,7 +155,7 @@
                     <div class="portfolio-overlay">
                         <h3>Graduation project</h3>
                         <p>Class and graduation projects on AI</p>
-                        <a href="#" class="btn">View Project</a>
+                        <a href="https://github.com/BenBadang/gradProjects" class="btn">View Project</a>
                     </div>
                 </div>
                 <!-- Add more projects as needed -->
