--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <div class="portfolio-overlay">
                         <h3>Graduation project</h3>
                         <p>Class and graduation projects on AI</p>
-                        <a href="https:https://github.com/BenBadang/gradProjects/tree/main/GIS" class="btn">View Project</a>
+                        <a href="https://github.com/BenBadang/gradProjects/tree/main/GIS" class="btn">View Project</a>
                     </div>
                 </div>
                 <!-- Add more projects as needed -->
