--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
                     <div class="portfolio-overlay">
                         <h3>E-commerce Website</h3>
                         <p>Full-stack e-commerce solution</p>
-                        <a href="" class="btn">View Project</a>
+                        <a href="https://github.com/Nyombe/E-commerce" class="btn">View Project</a>
                     </div>
                 </div>
-                <!-- Project 2 -->
+                <! Project 2 >
                 <div class="portfolio-item" data-category="design">
                     <img src="1.jpg" alt="Design Project 1">
                     <div class="portfolio-overlay">
@@ -149,21 +149,19 @@
                         <a href="#" class="btn">View Project</a>
                     </div>
                 </div>
-                 <!-- Project 3 -->
+                 <! Project 3 >
                 <div class="portfolio-item" data-category="AI">
                     <img src="6.JPG" alt="AI Project 1">
                     <div class="portfolio-overlay">
                         <h3>Graduation project</h3>
                         <p>Class and graduation projects on AI</p>
-                        <a href="https://github.com/BenBadang/gradProjects" class="btn">View Project</a>
+                        <a href="https://github.com/Nyombe/gradProjects" class="btn">View Project</a>
                     </div>
                 </div>
-                <!-- Add more projects as needed -->
-            </div>
         </div>
     </section>
 
-    <!-- Contact Section -->
+    <! Contact Section >
     <section id="contact" class="contact">
         <div class="container">
             <h2 class="section-title">Get In Touch</h2>
@@ -174,7 +172,7 @@
                     <p><i class="fas fa-phone"></i> +211 928 530 446</p>
                     <p><i class="fas fa-map-marker-alt"></i> Juba, South Sudan</p>
                     <div class="social-links">
-                        <a href="https://github.com/BenBadang"><i class="fab fa-github"></i></a>
+                        <a href="https://github.com/Nyombe"><i class="fab fa-github"></i></a>
                         <a href="https://www.linkedin.com/in/nyombe-benson-jalle-b2aa13"><i class="fab fa-linkedin"></i></a>
                         <a href="https://x.com/benniejalle?s=2"><i class="fab fa-x"></i></a>
                         <a href="https://facebook.com/ben.son.366135"><i class="fab fa-facebook"></i></a>
@@ -199,7 +197,7 @@
         </div>
     </section>
 
-    <!-- Footer -->
+    <!Footer >
     <footer>
         <div class="container">
             <p>&copy; <span id="year"></span> @Benson. All Rights Reserved.</p>
