--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <!-- Header/Navigation -->
+    <! Header/Navigation >
     <header>
         <div class="container">
             <div class="logo"> Nyombe Benson Jalle</div>
@@ -30,7 +30,7 @@
         </div>
     </header>
 
-    <!-- Hero Section -->
+    <! Hero Section >
     <section id="home" class="hero">
         <div class="container">
             <div class="hero-content">
@@ -45,7 +45,7 @@
         </div>
     </section>
 
-    <!-- About Section -->
+    <! About Section >
     <section id="about" class="about">
         <div class="container">
             <h2 class="section-title">About Me</h2>
@@ -77,7 +77,7 @@
         </div>
     </section>
 
-    <!-- Skills Section -->
+    <! Skills Section >
     <section id="skills" class="skills">
         <div class="container">
             <h2 class="section-title">My Skills</h2>
@@ -120,7 +120,7 @@
         </div>
     </section>
 
-    <!-- Portfolio Section -->
+    <! Portfolio Section >
     <section id="portfolio" class="portfolio">
         <div class="container">
             <h2 class="section-title">My Work</h2>
@@ -131,7 +131,7 @@
                 <button class="filter-btn" data-filter="AI">AI projects</button>
             </div>
             <div class="portfolio-grid">
-                <!-- Project 1 -->
+                <! Project 1 >
                 <div class="portfolio-item" data-category="web">
                     <img src="11.JPG" alt="Web Project 1">
                     <div class="portfolio-overlay">
