--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <div class="portfolio-overlay">
                         <h3>E-commerce Website</h3>
                         <p>Full-stack e-commerce solution</p>
-                        <a href="https://github.com/Nyombe/E-commerce" class="btn">View Project</a>
+                        <a href="https://github.com/Nyombe/E-commerce-project" class="btn">View Project</a>
                     </div>
                 </div>
                 <! Project 2 >
