--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     <div class="portfolio-overlay">
                         <h3>Brand Identity</h3>
                         <p>Logo and branding for a local business</p>
-                        <a href="#" class="btn">View Project</a>
+                        <a href="https://github.com/Nyombe/Graphics-projects" class="btn">View Project</a>
                     </div>
                 </div>
                  <! Project 3 >
