--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="hero-content">
                 <h1>Hi, I'm Benson</h1>
                 <h2>Web Developer & Graphic Designer</h2>
-                <p>Information Technology Graduate from University of Juba, South.</p>
+                <p>Information Technology Graduate from University of Juba, South Sudan.</p>
                 <a href="#contact" class="btn">Get In Touch</a>
             </div>
             <div class="hero-image">
